[package]
name = "piano_man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
maplit = "1.0.2"
cpal = "0.15.3"
minimp3 = "0.5.1"
itertools = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
wgpu = "0.20.0"
rand = "0.8.5"
